--- a/Bootstrap2/index.html
+++ b/Bootstrap2/index.html
@@ -38,10 +38,10 @@
               <a class="nav-link" href="#welcome">Welcome</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Collection</a>
+              <a class="nav-link" href="#collection">Collection</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Prices</a>
+              <a class="nav-link" href="#prices">Prices</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#default">Default</a>
@@ -139,13 +139,13 @@
   </section>
 
   <section id="prices" class="prices-section">
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center align-items-center">
       <h2>Pricing</h2>
       <p class="lead">Check our prices here.</p>
 
-      <div class="d-flex justify-content-center">
+      <div class="row">
         
-        <div>
+        <div class="col-md-4">
           <div class="card border-warning mb-3 m-4" style="max-width: 18rem;">
             <div class="card-header">Simple Poster</div>
             <div class="card-body">
@@ -155,7 +155,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="col-md-4">
           <div class="card border-warning mb-3 m-4" style="max-width: 18rem;">
             <div class="card-header">Special Poster</div>
             <div class="card-body">
@@ -165,7 +165,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="col-md-4">
         <div class="card border-warning mb-3 m-4" style="max-width: 18rem;">
           <div class="card-header">Premium Poster</div>
           <div class="card-body">
